Renamed folder names.

--- a/EURPLN_exchange_rate_analysis.ipynb
+++ b/EURPLN_exchange_rate_analysis.ipynb
@@ -40,7 +40,7 @@
     "import urllib.request\n",
     "import io\n",
     "\n",
-    "# do ploting inline instead of in a separate window\n",
+    "# do plotting inline instead of in a separate window\n",
     "%matplotlib inline"
    ]
   },
@@ -633,7 +633,6 @@
     }
    ],
    "source": [
-    "\n",
     "x = np.arange(0, 1000)\n",
     "f = np.arange(0, 1000)\n",
     "g = np.sin(np.arange(0, 10, 0.01)) * 1000\n",
@@ -773,7 +772,7 @@
     "plt.plot(recent_exchange_rates)    \n",
     "comparison_pair = (3, 10)\n",
     "intersection_points = plot_pair(comparison_pair)\n",
-    "plt.legend(['exchange rates', \"SMA-{}\".format(comparison_pair[0]), \"SMA-{}\".format(comparison_pair[1])], loc='upper left')\n"
+    "plt.legend(['exchange rates', \"SMA-{}\".format(comparison_pair[0]), \"SMA-{}\".format(comparison_pair[1])], loc='upper left')"
    ]
   },
   {
@@ -843,7 +842,7 @@
     "ax3.plot(test_sma_1)\n",
     "ax3.plot(test_sma_2)\n",
     "ax3.plot(intpoints_v3, test_sma_1[intpoints_v3], 'bo')\n",
-    "ax3.plot(intpoints_v3, test_sma_2[intpoints_v3], 'go')\n"
+    "ax3.plot(intpoints_v3, test_sma_2[intpoints_v3], 'go')"
    ]
   },
   {
@@ -942,7 +941,7 @@
     "#p2_1 = array([ 0, 4.39197])\n",
     "#p2_2 = array([ 1, 4.40709])\n",
     "#print(seg_intersect(p1_1, p1_2, p2_1, p2_2))\n",
-    "#print(get_intersection_point_in_range(p1_1, p1_2, p2_1, p2_2))\n"
+    "#print(get_intersection_point_in_range(p1_1, p1_2, p2_1, p2_2))"
    ]
   },
   {
@@ -981,8 +980,7 @@
     "ax1.plot(test_sma_2)\n",
     "\n",
     "for intpoint in intpoints_v1:\n",
-    "    ax1.plot(intpoint[0], intpoint[1], 'ro')\n",
-    "\n"
+    "    ax1.plot(intpoint[0], intpoint[1], 'ro')"
    ]
   },
   {
@@ -1117,7 +1115,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -1129,7 +1129,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
