Fixed path to static file.

--- a/Notebooks/EURPLN_exchange_rate_analysis.ipynb
+++ b/Notebooks/EURPLN_exchange_rate_analysis.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "if use_static:\n",
     "    # use static file to perform analysis\n",
-    "    url = './data-archive/EUR_2013.09.09_2016.09.05.csv'\n",
+    "    url = '../data-archive/currencies/EUR_2013.09.09_2016.09.05.csv'\n",
     "    df = pd.read_csv(url, sep=';')     # load data\n",
     "else:\n",
     "    # or get latest data\n",
