Refactored application code just to make it easy to execute it from Jupyter Notebook.

--- a/money_machine_app/Money_Maker_App.ipynb
+++ b/money_machine_app/Money_Maker_App.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Download currencies"
+    "## Data downloading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Currencies"
    ]
   },
   {
@@ -25,14 +32,14 @@
     "currencies = 'EUR;USD;GBP;CHF'\n",
     "\n",
     "# Uncomment line below to download latest exchange rates for currencies\n",
-    "#%run currency_data_downloader.py $start $end $currencies"
+    "#%run downloaders/currency_data_downloader.py $start $end $currencies"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Download stock quotes"
+    "#### Stock quotes"
    ]
   },
   {
@@ -46,7 +53,92 @@
     "stock_symbols = 'WIG;KRU;11B;WLT;KGH;URS;LVC'\n",
     "\n",
     "# Uncomment line below to download latest quotes for stocks\n",
-    "#%run stocks_data_downloader.py $start $end $stock_symbols"
+    "#%run downloaders/stocks_data_downloader.py $start $end $stock_symbols"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ETFs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = '2012-01-01'\n",
+    "end = '2017-12-31'\n",
+    "eft_symbols = 'ETFW20L.PL;ETFSP500.PL;ETFDAX.PL'\n",
+    "\n",
+    "# Uncomment line below to download latest quotes for stocks\n",
+    "#%run downloaders/stocks_data_downloader.py $start $end $eft_symbols"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Currencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analysis_type = \"CURRENCY\"\n",
+    "currencies_for_analysis = 'EUR;USD;GBP;CHF'\n",
+    "\n",
+    "#%run money_maker_app.py $analysis_type $currencies_for_analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stocks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analysis_type = \"STOCK\"\n",
+    "stocks_for_analysis = 'KRU;11B;WLT;KGH;URS;LVC'\n",
+    "\n",
+    "#%run money_maker_app.py $analysis_type $stocks_for_analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ETFs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analysis_type = \"ETF\"\n",
+    "etfs_for_analysis = 'ETFW20L.PL;ETFSP500.PL;ETFDAX.PL'\n",
+    "\n",
+    "#%run money_maker_app.py $analysis_type $etfs_for_analysis"
    ]
   }
  ],
