Subtle changes in the plot presentation

--- a/money_machine_app/Money_Maker_App.ipynb
+++ b/money_machine_app/Money_Maker_App.ipynb
@@ -94,13 +94,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "analysis_type = \"CURRENCY\"\n",
     "currencies_for_analysis = 'EUR;USD;GBP;CHF'\n",
     "\n",
-    "#%run money_maker_app.py $analysis_type $currencies_for_analysis"
+    "%run money_maker_app.py $analysis_type $currencies_for_analysis"
    ]
   },
   {
@@ -113,13 +115,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "analysis_type = \"STOCK\"\n",
     "stocks_for_analysis = 'KRU;11B;WLT;KGH;URS;LVC'\n",
     "\n",
-    "#%run money_maker_app.py $analysis_type $stocks_for_analysis"
+    "%run money_maker_app.py $analysis_type $stocks_for_analysis"
    ]
   },
   {
@@ -132,13 +136,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "analysis_type = \"ETF\"\n",
     "etfs_for_analysis = 'ETFW20L.PL;ETFSP500.PL;ETFDAX.PL'\n",
     "\n",
-    "#%run money_maker_app.py $analysis_type $etfs_for_analysis"
+    "%run money_maker_app.py $analysis_type $etfs_for_analysis"
    ]
   }
  ],
